--- a/nginx-proxy.traefik.conf
+++ b/nginx-proxy.traefik.conf
@@ -11,94 +11,98 @@ http {
     resolver 8.8.8.8 8.8.4.4 1.1.1.1 1.0.0.1 valid=300s;
     resolver_timeout 5s;
 
-    upstream ghost_server {
-        server ghost:2368;
-    }
-
     server {
         listen 80;
-        listen [::]:80;
 
-        # Proxy JSDelivr
+        # Proxy JSDelivr (/proxy/npm/)
         location ~ ^/proxy/npm/(.*)$ {
             proxy_pass https://cdn.jsdelivr.net/npm/$1;
-            
             proxy_cache jsdelivr;
+
             proxy_cache_valid 200 24h;
+            proxy_cache_valid 302 10m;
+            proxy_cache_use_stale error timeout updating http_500 http_502 http_503 http_504;
             proxy_cache_lock on;
-            
+
             add_header X-Cache-Status $upstream_cache_status;
+            add_header X-Proxy-Cache jsdelivr-24h;
 
             proxy_set_header Host cdn.jsdelivr.net;
             proxy_set_header X-Real-IP "";
             proxy_set_header X-Forwarded-For "";
+
             proxy_ssl_server_name on;
+            proxy_ssl_verify off;
+
+            proxy_cache_key $scheme$proxy_host$request_uri;
         }
 
-        # Proxy YouTube OEmbed
+        # Proxy YouTube OEmbed (/proxy/youtube/data/oembed)
         location = /proxy/youtube/data/oembed {
             proxy_pass https://www.youtube.com/oembed$is_args$args;
-            
-            proxy_cache youtube;
-            proxy_cache_valid 200 1h;
-            proxy_cache_lock on;
-            
-            add_header X-Cache-Status $upstream_cache_status;
 
             proxy_set_header Host www.youtube.com;
             proxy_set_header X-Real-IP "";
             proxy_set_header X-Forwarded-For "";
-            proxy_ssl_server_name on;
-        }
 
-        # Proxy YouTube Thumbnails
-        location ~ ^/proxy/youtube/thumbnail/(.*)$ {
-            proxy_pass https://i.ytimg.com/$1;
-            
             proxy_cache youtube;
             proxy_cache_valid 200 1h;
+            proxy_cache_use_stale error timeout updating http_500 http_502 http_503 http_504;
             proxy_cache_lock on;
-            
+
             add_header X-Cache-Status $upstream_cache_status;
+            add_header X-Proxy-Cache youtube-1h;
+
+            proxy_ssl_server_name on;
+            proxy_ssl_verify off;
+            proxy_cache_key $scheme$proxy_host$request_uri;
+        }
+
+        # Proxy YouTube Thumbnail (/proxy/youtube/thumbnail/...)
+        location ~ ^/proxy/youtube/thumbnail/(.*)$ {
+            proxy_pass https://i.ytimg.com/$1;
 
             proxy_set_header Host i.ytimg.com;
             proxy_set_header X-Real-IP "";
             proxy_set_header X-Forwarded-For "";
-            proxy_ssl_server_name on;
-        }
 
-        # Proxy YouTube Embeds (nocookie)
-        location ~ ^/proxy/youtube/embed/(.*)$ {
-            proxy_pass https://www.youtube-nocookie.com/embed/$1$is_args$args;
-            
             proxy_cache youtube;
             proxy_cache_valid 200 1h;
+            proxy_cache_use_stale error timeout updating http_500 http_502 http_503 http_504;
             proxy_cache_lock on;
-            
+
             add_header X-Cache-Status $upstream_cache_status;
+            add_header X-Proxy-Cache youtube-1h;
+
+            proxy_ssl_server_name on;
+            proxy_ssl_verify off;
+            proxy_cache_key $scheme$proxy_host$request_uri;
+        }
+
+        # Proxy YouTube Embed (/proxy/youtube/embed/...)
+        location ~ ^/proxy/youtube/embed/(.*)$ {
+            proxy_pass https://www.youtube-nocookie.com/embed/$1$is_args$args;
 
             proxy_set_header Host www.youtube-nocookie.com;
             proxy_set_header X-Real-IP "";
             proxy_set_header X-Forwarded-For "";
+
+            proxy_cache youtube;
+            proxy_cache_valid 200 1h;
+            proxy_cache_use_stale error timeout updating http_500 http_502 http_503 http_504;
+            proxy_cache_lock on;
+
+            add_header X-Cache-Status $upstream_cache_status;
+            add_header X-Proxy-Cache youtube-1h;
+
             proxy_ssl_server_name on;
+            proxy_ssl_verify off;
+            proxy_cache_key $scheme$proxy_host$request_uri;
         }
 
-        # Proxy ActivityPub
-        location ~ ^/(.well-known/webfinger|.well-known/nodeinfo|users/.*|inbox) {
-            proxy_pass https://ap.ghost.org;
-            proxy_set_header Host ap.ghost.org;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto http; # Protokoll ist jetzt http
-        }
-
-        # Catch-all
+        # Fallback für alle anderen Requests
         location / {
-            proxy_pass http://ghost_server;
-            proxy_set_header Host $http_host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto http; # Protokoll ist jetzt http
+            return 404;
         }
     }
 }
