--- a/example.env
+++ b/example.env
@@ -1,5 +1,5 @@
 # Domain
-DOMAIN="meine-website.de"
+HOSTNAME="meine-website.de"
 
 # Ersteinrichtung
 GHOST_SETUP_NAME="Vorname Nachname"
@@ -20,18 +20,6 @@ GHOST_MAIL_HOST="mail.meine-website.de"
 GHOST_MAIL_PORT=587
 GHOST_MAIL_USER="noreply@meine-website.de"
 GHOST_MAIL_PASS="<Passwort>"
-
-# HTTP-Caching
-GHOST_CACHE_FRONTEND_MAXAGE=300
-GHOST_CACHE_CONTENTAPI_MAXAGE=300
-GHOST_CACHE_ROBOTSTXT_MAXAGE=3600
-GHOST_CACHE_SITEMAP_MAXAGE=3600
-GHOST_CACHE_SITEMAPXSL_MAXAGE=86400
-GHOST_CACHE_WELLKNOWN_MAXAGE=86400
-GHOST_CACHE_CORS_MAXAGE=86400
-GHOST_CACHE_PUBLICASSETS_MAXAGE=31536000
-GHOST_CACHE_301_MAXAGE=3600
-GHOST_CACHE_CUSTOMREDIRECTS_MAXAGE=10800
 
 # Redis-Cache
 GHOST_CACHE_TYPE="redis"
