--- a/nginx-proxy.traefik.conf
+++ b/nginx-proxy.traefik.conf
@@ -14,7 +14,6 @@ http {
     server {
         listen 80;
 
-        # Proxy JSDelivr (/proxy/npm/)
         location ~ ^/proxy/npm/(.*)$ {
             proxy_pass https://cdn.jsdelivr.net/npm/$1;
             proxy_cache jsdelivr;
@@ -23,22 +22,17 @@ http {
             proxy_cache_valid 302 10m;
             proxy_cache_use_stale error timeout updating http_500 http_502 http_503 http_504;
             proxy_cache_lock on;
-
             add_header X-Cache-Status $upstream_cache_status;
             add_header X-Proxy-Cache jsdelivr-24h;
-
             proxy_set_header Host cdn.jsdelivr.net;
             proxy_set_header X-Real-IP "";
             proxy_set_header X-Forwarded-For "";
-
             proxy_ssl_server_name on;
             proxy_ssl_verify off;
-
             proxy_cache_key $scheme$proxy_host$request_uri;
         }
 
-        # Proxy YouTube OEmbed (/proxy/youtube/data/oembed)
-        location = /proxy/youtube/data/oembed {
+        location ~ ^/proxy/youtube/data/oembed {
             proxy_pass https://www.youtube.com/oembed$is_args$args;
 
             proxy_set_header Host www.youtube.com;
@@ -58,7 +52,6 @@ http {
             proxy_cache_key $scheme$proxy_host$request_uri;
         }
 
-        # Proxy YouTube Thumbnail (/proxy/youtube/thumbnail/...)
         location ~ ^/proxy/youtube/thumbnail/(.*)$ {
             proxy_pass https://i.ytimg.com/$1;
 
@@ -79,7 +72,6 @@ http {
             proxy_cache_key $scheme$proxy_host$request_uri;
         }
 
-        # Proxy YouTube Embed (/proxy/youtube/embed/...)
         location ~ ^/proxy/youtube/embed/(.*)$ {
             proxy_pass https://www.youtube-nocookie.com/embed/$1$is_args$args;
 
@@ -100,7 +92,6 @@ http {
             proxy_cache_key $scheme$proxy_host$request_uri;
         }
 
-        # Fallback für alle anderen Requests
         location / {
             return 404;
         }
