now using /etc/nginx/nginx.conf

--- a/nginx-proxy.traefik.conf
+++ b/nginx-proxy.traefik.conf
@@ -2,11 +2,14 @@ worker_processes auto;
 events { worker_connections 1024; }
 
 http {
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
+    
     # Cache für JSDelivr NPM-Pakete (24 Stunden)
-    proxy_cache_path /var/cache/nginx levels=1:2 keys_zone=jsdelivr:100m max_size=1g inactive=24h use_temp_path=off;
+    proxy_cache_path /var/cache/nginx levels=1:2 keys_zone=jsdelivr:100m max_size=500m inactive=24h use_temp_path=off;
 
     # Cache für YouTube-Inhalte (1 Stunde)
-    proxy_cache_path /var/cache/nginx/youtube levels=1:2 keys_zone=youtube:50m max_size=500m inactive=1h use_temp_path=off;
+    proxy_cache_path /var/cache/nginx/youtube levels=1:2 keys_zone=youtube:10m max_size=500m inactive=1h use_temp_path=off;
 
     resolver 8.8.8.8 8.8.4.4 1.1.1.1 1.0.0.1 valid=300s;
     resolver_timeout 5s;
@@ -17,7 +20,6 @@ http {
         location ~ ^/proxy/npm/(.*)$ {
             proxy_pass https://cdn.jsdelivr.net/npm/$1;
             proxy_cache jsdelivr;
-
             proxy_cache_valid 200 24h;
             proxy_cache_valid 302 10m;
             proxy_cache_use_stale error timeout updating http_500 http_502 http_503 http_504;
@@ -32,21 +34,17 @@ http {
             proxy_cache_key $scheme$proxy_host$request_uri;
         }
 
-        location ~ ^/proxy/youtube/data/oembed {
+        location = /proxy/youtube/data/oembed {
             proxy_pass https://www.youtube.com/oembed$is_args$args;
-
             proxy_set_header Host www.youtube.com;
             proxy_set_header X-Real-IP "";
             proxy_set_header X-Forwarded-For "";
-
             proxy_cache youtube;
             proxy_cache_valid 200 1h;
             proxy_cache_use_stale error timeout updating http_500 http_502 http_503 http_504;
             proxy_cache_lock on;
-
             add_header X-Cache-Status $upstream_cache_status;
             add_header X-Proxy-Cache youtube-1h;
-
             proxy_ssl_server_name on;
             proxy_ssl_verify off;
             proxy_cache_key $scheme$proxy_host$request_uri;
@@ -54,19 +52,15 @@ http {
 
         location ~ ^/proxy/youtube/thumbnail/(.*)$ {
             proxy_pass https://i.ytimg.com/$1;
-
             proxy_set_header Host i.ytimg.com;
             proxy_set_header X-Real-IP "";
             proxy_set_header X-Forwarded-For "";
-
             proxy_cache youtube;
             proxy_cache_valid 200 1h;
             proxy_cache_use_stale error timeout updating http_500 http_502 http_503 http_504;
             proxy_cache_lock on;
-
             add_header X-Cache-Status $upstream_cache_status;
             add_header X-Proxy-Cache youtube-1h;
-
             proxy_ssl_server_name on;
             proxy_ssl_verify off;
             proxy_cache_key $scheme$proxy_host$request_uri;
@@ -74,19 +68,15 @@ http {
 
         location ~ ^/proxy/youtube/embed/(.*)$ {
             proxy_pass https://www.youtube-nocookie.com/embed/$1$is_args$args;
-
             proxy_set_header Host www.youtube-nocookie.com;
             proxy_set_header X-Real-IP "";
             proxy_set_header X-Forwarded-For "";
-
             proxy_cache youtube;
             proxy_cache_valid 200 1h;
             proxy_cache_use_stale error timeout updating http_500 http_502 http_503 http_504;
             proxy_cache_lock on;
-
             add_header X-Cache-Status $upstream_cache_status;
             add_header X-Proxy-Cache youtube-1h;
-
             proxy_ssl_server_name on;
             proxy_ssl_verify off;
             proxy_cache_key $scheme$proxy_host$request_uri;
