--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -88,7 +88,7 @@ services:
     ports:
       - "80:80"
     volumes:
-      - ./nginx-proxy.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./nginx-proxy.conf:/etc/nginx/nginx.conf:ro
       - nginx-cache:/var/cache/nginx
     networks:
       - default
