--- a/nginx-proxy.conf
+++ b/nginx-proxy.conf
@@ -1,91 +1,103 @@
-proxy_cache_path /var/cache/nginx/jsdelivr levels=1:2 keys_zone=jsdelivr:100m max_size=1g inactive=24h use_temp_path=off;
-proxy_cache_path /var/cache/nginx/youtube levels=1:2 keys_zone=youtube:50m max_size=500m inactive=1h use_temp_path=off;
+worker_processes auto;
+events { worker_connections 1024; }
 
-resolver 8.8.8.8 8.8.4.4 1.1.1.1 1.0.0.1 valid=300s;
-resolver_timeout 5s;
+http {
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
+    
+    # Cache für JSDelivr NPM-Pakete (24 Stunden)
+    proxy_cache_path /var/cache/nginx/jsdelivr levels=1:2 keys_zone=jsdelivr:100m max_size=500m inactive=24h use_temp_path=off;
 
-upstream ghost_server {
-    server ghost:2368;
-}
+    # Cache für YouTube-Inhalte (1 Stunde)
+    proxy_cache_path /var/cache/nginx/youtube levels=1:2 keys_zone=youtube:100m max_size=500m inactive=1h use_temp_path=off;
 
-server {
-    listen 80;
-    listen [::]:80;
-    server_name ${DOMAIN};
+    resolver 8.8.8.8 8.8.4.4 1.1.1.1 1.0.0.1 valid=300s;
+    resolver_timeout 5s;
 
-    location ~ ^/proxy/npm/(.*)$ {
-        proxy_pass https://cdn.jsdelivr.net/npm/$1$is_args$args;
-        proxy_cache jsdelivr;
-        proxy_cache_valid 200 24h;
-        proxy_cache_lock on;
-        add_header X-Cache-Status $upstream_cache_status;
-        proxy_set_header Host cdn.jsdelivr.net;
-        proxy_set_header X-Real-IP "";
-        proxy_set_header X-Forwarded-For "";
-        proxy_set_header Referer "";
-        proxy_set_header User-Agent "";
-        proxy_ssl_server_name on;
-        proxy_cache_key $scheme$proxy_host$request_uri;
+    upstream ghost_server {
+        server ghost:2368;
     }
 
-    location ~ ^/proxy/youtube/data/oembed {
-        proxy_pass https://www.youtube.com/oembed$is_args$args;
-        proxy_cache youtube;
-        proxy_cache_valid 200 1h;
-        proxy_cache_lock on;
-        add_header X-Cache-Status $upstream_cache_status;
-        proxy_set_header Host www.youtube.com;
-        proxy_set_header X-Real-IP "";
-        proxy_set_header X-Forwarded-For "";
-        proxy_set_header Referer "";
-        proxy_set_header User-Agent "";
-        proxy_ssl_server_name on;
-        proxy_cache_key $scheme$proxy_host$request_uri;
-    }
+    server {
+        listen 80;
 
-    location ~ ^/proxy/youtube/thumbnail/(.*)$ {
-        proxy_pass https://i.ytimg.com/$1$is_args$args;
-        proxy_cache youtube;
-        proxy_cache_valid 200 1h;
-        proxy_cache_lock on;
-        add_header X-Cache-Status $upstream_cache_status;
-        proxy_set_header Host i.ytimg.com;
-        proxy_set_header X-Real-IP "";
-        proxy_set_header X-Forwarded-For "";
-        proxy_set_header Referer "";
-        proxy_set_header User-Agent "";
-        proxy_ssl_server_name on;
-        proxy_cache_key $scheme$proxy_host$request_uri;
-    }
+        location ~ ^/proxy/npm/(.*)$ {
+            proxy_pass https://cdn.jsdelivr.net/npm/$1;
+            proxy_cache jsdelivr;
+            proxy_cache_valid 200 24h;
+            proxy_cache_lock on;
+            add_header X-Cache-Status $upstream_cache_status;
+            proxy_set_header Host cdn.jsdelivr.net;
+            proxy_set_header X-Real-IP "";
+            proxy_set_header X-Forwarded-For "";
+            proxy_set_header Referer "";
+            proxy_set_header User-Agent "";
+            proxy_ssl_server_name on;
+            proxy_ssl_verify off;
+            proxy_cache_key $scheme$proxy_host$request_uri;
+        }
 
-    location ~ ^/proxy/youtube/embed/(.*)$ {
-        proxy_pass https://www.youtube-nocookie.com/embed/$1$is_args$args;
-        proxy_cache youtube;
-        proxy_cache_valid 200 1h;
-        proxy_cache_lock on;
-        add_header X-Cache-Status $upstream_cache_status;
-        proxy_set_header Host www.youtube-nocookie.com;
-        proxy_set_header X-Real-IP "";
-        proxy_set_header X-Forwarded-For "";
-        proxy_set_header Referer "";
-        proxy_set_header User-Agent "";
-        proxy_ssl_server_name on;
-        proxy_cache_key $scheme$proxy_host$request_uri;
-    }
+        location = /proxy/youtube/data/oembed {
+            proxy_pass https://www.youtube.com/oembed$is_args$args;
+            proxy_cache youtube;
+            proxy_cache_valid 200 1h;
+            proxy_cache_lock on;
+            add_header X-Cache-Status $upstream_cache_status;
+            proxy_set_header Host www.youtube.com;
+            proxy_set_header X-Real-IP "";
+            proxy_set_header X-Forwarded-For "";
+            proxy_set_header Referer "";
+            proxy_set_header User-Agent "";
+            proxy_ssl_server_name on;
+            proxy_cache_key $scheme$proxy_host$request_uri;
+        }
 
-    location ~ ^/(.well-known/webfinger|.well-known/nodeinfo|users/.*|inbox) {
-        proxy_pass https://ap.ghost.org;
-        proxy_set_header Host ap.ghost.org;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto http;
-    }
+        location ~ ^/proxy/youtube/thumbnail/(.*)$ {
+            proxy_pass https://i.ytimg.com/$1;
+            proxy_cache youtube;
+            proxy_cache_valid 200 1h;
+            proxy_cache_lock on;
+            add_header X-Cache-Status $upstream_cache_status;
+            proxy_set_header Host i.ytimg.com;
+            proxy_set_header X-Real-IP "";
+            proxy_set_header X-Forwarded-For "";
+            proxy_set_header Referer "";
+            proxy_set_header User-Agent "";
+            proxy_ssl_server_name on;
+            proxy_ssl_verify off;
+            proxy_cache_key $scheme$proxy_host$request_uri;
+        }
 
-    location / {
-        proxy_pass http://ghost_server;
-        proxy_set_header Host $http_host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto http;
+        location ~ ^/proxy/youtube/embed/(.*)$ {
+            proxy_pass https://www.youtube-nocookie.com/embed/$1$is_args$args;
+            proxy_cache youtube;
+            proxy_cache_valid 200 1h;
+            proxy_cache_lock on;
+            add_header X-Cache-Status $upstream_cache_status;
+            proxy_set_header Host www.youtube-nocookie.com;
+            proxy_set_header X-Real-IP "";
+            proxy_set_header X-Forwarded-For "";
+            proxy_set_header Referer "";
+            proxy_set_header User-Agent "";
+            proxy_ssl_server_name on;
+            proxy_ssl_verify off;
+            proxy_cache_key $scheme$proxy_host$request_uri;
+        }
+
+        location ~ ^/(.well-known/webfinger|.well-known/nodeinfo|users/.*|inbox) {
+            proxy_pass https://ap.ghost.org;
+            proxy_set_header Host ap.ghost.org;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto http;
+        }
+
+        location / {
+            proxy_pass http://ghost_server;
+            proxy_set_header Host $http_host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto http;
+        }
     }
 }
