--- a/nginx-proxy.conf
+++ b/nginx-proxy.conf
@@ -4,7 +4,7 @@ events { worker_connections 1024; }
 http {
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
-    
+
     # Cache für JSDelivr NPM-Pakete (24 Stunden)
     proxy_cache_path /var/cache/nginx/jsdelivr levels=1:2 keys_zone=jsdelivr:100m max_size=500m inactive=24h use_temp_path=off;
 
@@ -27,6 +27,7 @@ http {
             proxy_cache_valid 200 24h;
             proxy_cache_lock on;
             add_header X-Cache-Status $upstream_cache_status;
+            proxy_ignore_headers Set-Cookie
             proxy_set_header Host cdn.jsdelivr.net;
             proxy_set_header X-Real-IP "";
             proxy_set_header X-Forwarded-For "";
@@ -34,7 +35,7 @@ http {
             proxy_set_header User-Agent "";
             proxy_ssl_server_name on;
             proxy_ssl_verify off;
-            proxy_cache_key $scheme$proxy_host$request_uri;
+            proxy_cache_key $scheme$proxy_host$request_uri$is_args$args;
         }
 
         location = /proxy/youtube/data/oembed {
@@ -43,13 +44,14 @@ http {
             proxy_cache_valid 200 1h;
             proxy_cache_lock on;
             add_header X-Cache-Status $upstream_cache_status;
+            proxy_ignore_headers Set-Cookie
             proxy_set_header Host www.youtube.com;
             proxy_set_header X-Real-IP "";
             proxy_set_header X-Forwarded-For "";
             proxy_set_header Referer "";
             proxy_set_header User-Agent "";
             proxy_ssl_server_name on;
-            proxy_cache_key $scheme$proxy_host$request_uri;
+            proxy_cache_key $scheme$proxy_host$request_uri$is_args$args;
         }
 
         location ~ ^/proxy/youtube/thumbnail/(.*)$ {
@@ -58,6 +60,7 @@ http {
             proxy_cache_valid 200 1h;
             proxy_cache_lock on;
             add_header X-Cache-Status $upstream_cache_status;
+            proxy_ignore_headers Set-Cookie
             proxy_set_header Host i.ytimg.com;
             proxy_set_header X-Real-IP "";
             proxy_set_header X-Forwarded-For "";
@@ -65,7 +68,7 @@ http {
             proxy_set_header User-Agent "";
             proxy_ssl_server_name on;
             proxy_ssl_verify off;
-            proxy_cache_key $scheme$proxy_host$request_uri;
+            proxy_cache_key $scheme$proxy_host$request_uri$is_args$args;
         }
 
         location ~ ^/proxy/youtube/embed/(.*)$ {
@@ -74,6 +77,7 @@ http {
             proxy_cache_valid 200 1h;
             proxy_cache_lock on;
             add_header X-Cache-Status $upstream_cache_status;
+            proxy_ignore_headers Set-Cookie
             proxy_set_header Host www.youtube-nocookie.com;
             proxy_set_header X-Real-IP "";
             proxy_set_header X-Forwarded-For "";
@@ -81,7 +85,7 @@ http {
             proxy_set_header User-Agent "";
             proxy_ssl_server_name on;
             proxy_ssl_verify off;
-            proxy_cache_key $scheme$proxy_host$request_uri;
+            proxy_cache_key $scheme$proxy_host$request_uri$is_args$args;
         }
 
         location ~ ^/(.well-known/webfinger|.well-known/nodeinfo|users/.*|inbox) {
