fixed nginx.conf error

--- a/nginx-proxy.conf
+++ b/nginx-proxy.conf
@@ -28,7 +28,7 @@ http {
             proxy_cache_lock on;
             add_header X-Cache-Status $upstream_cache_status;
             proxy_ignore_headers Set-Cookie
-            proxy_set_header Host cdn.jsdelivr.net;
+            proxy_set_header Host "cdn.jsdelivr.net";
             proxy_set_header X-Real-IP "";
             proxy_set_header X-Forwarded-For "";
             proxy_set_header Referer "";
@@ -45,7 +45,7 @@ http {
             proxy_cache_lock on;
             add_header X-Cache-Status $upstream_cache_status;
             proxy_ignore_headers Set-Cookie
-            proxy_set_header Host www.youtube.com;
+            proxy_set_header Host "www.youtube.com";
             proxy_set_header X-Real-IP "";
             proxy_set_header X-Forwarded-For "";
             proxy_set_header Referer "";
@@ -61,7 +61,7 @@ http {
             proxy_cache_lock on;
             add_header X-Cache-Status $upstream_cache_status;
             proxy_ignore_headers Set-Cookie
-            proxy_set_header Host i.ytimg.com;
+            proxy_set_header Host "i.ytimg.com";
             proxy_set_header X-Real-IP "";
             proxy_set_header X-Forwarded-For "";
             proxy_set_header Referer "";
@@ -78,7 +78,7 @@ http {
             proxy_cache_lock on;
             add_header X-Cache-Status $upstream_cache_status;
             proxy_ignore_headers Set-Cookie
-            proxy_set_header Host www.youtube-nocookie.com;
+            proxy_set_header Host "www.youtube-nocookie.com";
             proxy_set_header X-Real-IP "";
             proxy_set_header X-Forwarded-For "";
             proxy_set_header Referer "";
@@ -90,7 +90,7 @@ http {
 
         location ~ ^/(.well-known/webfinger|.well-known/nodeinfo|users/.*|inbox) {
             proxy_pass https://ap.ghost.org;
-            proxy_set_header Host ap.ghost.org;
+            proxy_set_header Host "ap.ghost.org";
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto http;
