--- a/nginx-proxy.conf
+++ b/nginx-proxy.conf
@@ -27,7 +27,7 @@ http {
             proxy_cache_valid 200 24h;
             proxy_cache_lock on;
             add_header X-Cache-Status $upstream_cache_status;
-            proxy_ignore_headers Set-Cookie
+            proxy_ignore_headers Set-Cookie;
             proxy_set_header Host "cdn.jsdelivr.net";
             proxy_set_header X-Real-IP "";
             proxy_set_header X-Forwarded-For "";
@@ -44,7 +44,7 @@ http {
             proxy_cache_valid 200 1h;
             proxy_cache_lock on;
             add_header X-Cache-Status $upstream_cache_status;
-            proxy_ignore_headers Set-Cookie
+            proxy_ignore_headers Set-Cookie;
             proxy_set_header Host "www.youtube.com";
             proxy_set_header X-Real-IP "";
             proxy_set_header X-Forwarded-For "";
@@ -60,7 +60,7 @@ http {
             proxy_cache_valid 200 1h;
             proxy_cache_lock on;
             add_header X-Cache-Status $upstream_cache_status;
-            proxy_ignore_headers Set-Cookie
+            proxy_ignore_headers Set-Cookie;
             proxy_set_header Host "i.ytimg.com";
             proxy_set_header X-Real-IP "";
             proxy_set_header X-Forwarded-For "";
@@ -77,7 +77,7 @@ http {
             proxy_cache_valid 200 1h;
             proxy_cache_lock on;
             add_header X-Cache-Status $upstream_cache_status;
-            proxy_ignore_headers Set-Cookie
+            proxy_ignore_headers Set-Cookie;
             proxy_set_header Host "www.youtube-nocookie.com";
             proxy_set_header X-Real-IP "";
             proxy_set_header X-Forwarded-For "";
